# vulkan-hl

./: .gitmodules  SDL_vulkan  build  default.nix  helpers.el  result  shell.nix  stack.yaml  tri.frag  tri.vert  vulkan-hl.cabal
app/: Main.hs
data/: tri-frag.spv  tri-vert.spv
sdl2-vulkan/: default.nix  sdl2-vulkan.cabal
sdl2-vulkan/src/SDL/Video/: Vulkan.hs
src/: Lib.hs
src/Graphics/: Vulkan.hs
src/Graphics/Vulkan/: Core.hs  HL.hs  Internal.hs  Types.hs
src/Graphics/Vulkan/HL/: Core.hs  Format.hs
src/Graphics/Vulkan/HL/Internal/: Marshal.hs  Orphan.hs  TH.hs
src/Graphics/Vulkan/Internal/: Marshal.hs  TH.hs
