name:                vulkan-hl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vulkan-hl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vulkan.HL
                     , Graphics.Vulkan.HL.Core
  other-modules:       Graphics.Vulkan.HL.Internal.Marshal
                     , Graphics.Vulkan.HL.Internal.Orphan
                     , Graphics.Vulkan.HL.Internal.TH
  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2.1.1
                     , sdl2-vulkan >= 0.1
                     , template-haskell >= 2.11.0.0
                     , vector >= 0.11.0.0
                     , vector-sized >= 0.1.0.0
                     , vulkan
  default-language:    Haskell2010

executable vulkan-hl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linear >= 1.20.5
                     , sdl2 >= 2.1.1
                     , sdl2-vulkan >= 0.1
                     , vector >= 0.11.0.0
                     , vector-sized >= 0.1.0.0
                     , vulkan
                     , vulkan-hl
  default-language:    Haskell2010

test-suite vulkan-hl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vulkan-hl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vulkan-hl
